--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>TODO App</title>
 </head>
+
+
 <body>
-    <ul class="list"></ul>
+    <ul class="container">
+        <li class="item today-container">
+            <div>Today's TO DO</div>
+            <a class="fa-input" href="#"> <i class="fas fa-sync"></i></a>
+
+        </li>
+
+        <li class="item add-task-container">
+            <div><input type="text" class="input-task" placeholder="add task to your list ..."></div>
+            <a class="fa-input" href="#"><i class="fas fa-level-down-alt fa-rotate-90"></i></a>
+
+        </li>
+
+        <li class="populated-list"><ul class="list"></ul></li>
+        <li class="item clear"><div class="clear-all"><a href="#">Clear All tasks</a></div></li>
+
+    </ul>
+
+  
+
+
+    
+
+
 </body>
 </html>
